Need to validate that a file that passes the JarImpl.isJar(String) test is actually a file and not a directory for an unpacked jar before using JarImpl.
git-svn-id: https://svn.jboss.org/repos/jbossas/projects/microcontainer/trunk/container@55112 84be2c1e-ba19-0410-b317-a758671a6fc1